[package]
name = "tracing-jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.bril-rs]
git = "https://github.com/sampsyo/bril"
package = "bril-rs"
features = ["ssa", "memory", "float", "speculate"]

[dependencies.bril-utils]
version = "0.1.0"
path = "../../bril-utils/"
