[package]
name = "ssa"
version = "0.1.0"
edition = "2021"

[lib]
name = "ssa"
path = "src/lib.rs"

[dependencies]
clap = {version = "3.0.14", features = ["derive"]}
indexmap = "1.8.0"
bimap = "0.6.2"

[dependencies.bril-rs]
git = "https://github.com/sampsyo/bril"
package = "bril-rs"
features = ["ssa", "memory", "float", "speculate"]

[dependencies.bril-utils]
version = "0.1.0"
path = "../../bril-utils/"
